--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
       <scope>test</scope>
     </dependency>
 
+
+
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -41,12 +43,22 @@
       <version>5.3.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
       <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-context</artifactId>
           <version>5.3.3</version>
       </dependency>
+
+
+
+
 
 
   </dependencies>
